--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "tv-show-landing",
   "version": "1.0.0",
   "description": "",
+  "homepage": "https://deniscom3.github.io/tv-show-landing/",
   "main": "index.js",
   "scripts": {
     "build": "set NODE_ENV=production&&webpack",
     "dev": "set NODE_ENV=development&&webpack",
-    "start": "set NODE_ENV=development&&webpack serve --open"
+    "start": "set NODE_ENV=development&&webpack serve --open",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "npm run build"
+    
   },
   "keywords": [],
   "author": "",
@@ -29,5 +33,7 @@
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.5.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gh-pages": "^3.2.3"
+  }
 }
